results table added

--- a/website/templates/generate.html
+++ b/website/templates/generate.html
@@ -19,28 +19,40 @@
   </div>
 </form>
   
-<div class="container mt-5">
+<div class="container mt-3">
     {% if error_message %}
-      <div class="alert alert-danger">
-        {{ error_message }}
-      </div>
+        <div class="alert alert-danger">
+            {{ error_message }}
+        </div>
     {% else %}
-      {% for section, content in sections.items() %}
-        {% if "company name" in section|lower %}
-          <h4>{{ section }}: {{ content[0] }}</h2>
-        {% elif "position" in section|lower %}
-          <h4>{{ section }}: {{ content[0] }}</h3>
-        {% else %}
-          <h4>{{ section }}</h4>
-          <ul>
-            {% for line in content %}
-              <li>{{ line }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-      {% endfor %}
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                  <th>Job Analysis</th>
+                  <th>Job Ad Information</th>
+                </tr>
+              </thead>
+            <tbody>
+                {% for section, content in sections.items() %}
+                    <tr>
+                        <th scope="row">{{ section }}</th>
+                        <td>
+                            {% if "company name" in section|lower or "position" in section|lower %}
+                                <strong>{{ content[0] }}</strong>
+                            {% else %}
+                                <ul class="list-unstyled mb-0">
+                                    {% for line in content %}
+                                        <li>{{ line }}</li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     {% endif %}
-  </div>
+</div>
   
 <br id="createCover"/>
   <h3 align="left">Create your tailored supporting covering letter</h3>
@@ -124,7 +136,6 @@
     <button type="submit" name="create" class="btn btn-primary" onclick="printSelection()">Create</button>
   </div>
 </div>
-</form>
 
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
