--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -37,7 +37,7 @@
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="profile" href="/profile">Profile</a>
-          <a class="nav-item nav-link" id="generate" href="/generate">Analyze/Create</a>
+          <a class="nav-item nav-link" id="ana_cre_main" href="/ana_cre_main">Analyze/Create</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
