--- a/website/templates/ana_cre_inputad.html
+++ b/website/templates/ana_cre_inputad.html
@@ -1,13 +1,15 @@
-<h3 align="left">Use this section to analyze the job advert.</h3>
-<br />
+<div id="ana_cre_inputad">
+    <h3 align="left">Use this section to analyze the job advert.</h3>
+    <br />
 
-<form action="{{ url_for('views.ana_cre_main') }}" method="post">
-  <h5 align="left">Job advertisement</h5>
-  <div class="form-group">
-    <textarea class="form-control" id="job_ad" name="job_ad" rows="10" placeholder="Copy & paste job advert here...">{{ input_value }}</textarea>
-  </div>
-  <div>
-    <button type="submit" name="analyze" class="btn btn-primary" onclick="analyzeForm()">Analyze</button>
-    <button type="reset" class="btn btn-danger ml-2">Reset</button>
-  </div>
-</form>
+    <form action="{{ url_for('views.ana_cre_main') }}" method="post">
+    <h5 align="left">Job advertisement</h5>
+    <div class="form-group">
+        <textarea class="form-control" id="job_ad" name="job_ad" rows="10" placeholder="Copy & paste job advert here...">{{ input_value }}</textarea>
+    </div>
+    <div>
+        <button type="submit" id="analyze" name="analyze" class="btn btn-primary" onclick="analyzeForm()">Analyze</button>
+        <button type="reset" class="btn btn-danger ml-2">Reset</button>
+    </div>
+    </form>
+</div>
