--- a/website/templates/ana_cre_outputad.html
+++ b/website/templates/ana_cre_outputad.html
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div class="container mt-3" id="ana_cre_outputad">
     {% if error_message %}
         <div class="alert alert-danger">
             {{ error_message }}
