--- a/website/templates/ana_cre_outputad.html
+++ b/website/templates/ana_cre_outputad.html
@@ -1,3 +1,6 @@
+<h3 align="left">This is what ChatGPT think are the take aways</h3>
+<br />
+
 <div class="container mt-3" id="ana_cre_outputad">
     {% if error_message %}
         <div class="alert alert-danger">
