--- a/website/templates/analysis_create/ana_cre_main.html
+++ b/website/templates/analysis_create/ana_cre_main.html
@@ -7,10 +7,10 @@
 <br />
 
 {% if 'sections' in session %}
-  {% include "ana_cre_outputad.html" %}
-  {% include "ana_cre_create.html"%}
+  {% include "analysis_create/ana_cre_outputad.html" %}
+  {% include "analysis_create/ana_cre_create.html"%}
 {% else %}
-  {% include "ana_cre_inputad.html" %}
+  {% include "analysis_create/ana_cre_inputad.html" %}
 {% endif %}
 
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
