--- a/website/templates/profile/profile_main.html
+++ b/website/templates/profile/profile_main.html
@@ -1,52 +1,13 @@
 {% extends "base.html" %} 
 {% block title %}Profile{% endblock %} 
 {% block content%}
+
   <br />
     <h1 align="left">Profile</h1>
   <br />
-    <h3 align="left">OpenAI Access Parameters</h3>
-  <br />
 
-{% if not user.api_keys %}
-  <form method="POST">
-    <h5 align="left">Upload Api Key</h5>
-      <div class="form-group">
-        <input type="text" class="form-control" id="api_key" name="api_key" placeholder="Enter API Key here..."/>
-      </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
-{% else %}
-  <h5 align="left">API Key</h5>
-  <ul class="list-group list-group-flush" id="notes">
-    {% for api_key in user.api_keys %}
-    <li class="list-group-item">Your OpenAI API Key 
-      <button type="button" class="close" onClick="deleteApiKey({{ api_key.id }})">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </li>
-    {% endfor %}
-  </ul>
-{% endif %} 
-  <br />
-    <h3 align="left">Personalize Settings and Info</h3>
-  <br />
-    <h5 align="left">Build a database of notes your want to mention in your covering letter</h5>
-      <ul class="list-group list-group-flush" id="notes">
-      {% for note in user.notes %}
-        <li class="list-group-item list-group-item-dark">
-          {{ note.data }}
-          <button type="button" class="close" onClick="deleteNote({{ note.id }})">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </li>
-      {% endfor %}
-      </ul>
-    <form method="POST">
-      <div class="form-group">
-        <textarea name="note" id="note" rows="4" class="form-control" placeholder="Enter your passages here..."></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Add Statement Note</button>
-    </form>
+{% include "profile/profile_api.html" %}
+{% include "profile/profile_notes.html" %}
 
     <br />
     <h5 align="left">Add core skills to a cover letter skills database</h5>
@@ -62,7 +23,7 @@
         {% endfor %}
       </ul>
     </div>
-    <form action="{{ url_for('views.profile') }}" method="POST" id="skill-form">
+    <form action="{{ url_for('views.profile_main') }}" method="POST" id="skill-form">
       <div class="form-group">
         <input type="text" name="skill" id="skill" class="form-control" placeholder="Enter your core skill here...">
       </div>
