added abilty to delect the work exp notes and display then in the webpage

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -122,6 +122,15 @@
             });
           }
 
+          function deleteWorkexp(workexpId) {
+            fetch("/delete-workexp", {
+              method: "POST",
+              body: JSON.stringify({ workexpId: workexpId }),
+            }).then((_res) => {
+              window.location.href = "/profile_main";
+            });
+          }
+
           window.addEventListener('beforeunload', function() {
             localStorage.setItem('scrollPosition', window.scrollY);
           });
