--- a/website/templates/analysis_create/ana_cre_create.html
+++ b/website/templates/analysis_create/ana_cre_create.html
@@ -28,10 +28,8 @@
     </div>
   </div>
 
-  <br /> 
-
   <div id="output" class="mt-3">
-    <strong>Array of Strings:</strong>
+    <strong>Array supporting information:</strong>
     <ul id="stringList"></ul>
   </div>
   
@@ -44,6 +42,10 @@
   <button type="button" id="added-extra-btn" class="btn btn-primary mb-3">Add supporting infomation</button>
 
   <br />
+    <div class="form-group">
+      <label for="project_title">Name drop the recruiter:</label>
+      <input type="text" name="project_title" id="project_title" class="form-control" placeholder="Enter the recruiter..">
+    </div>
 
   <h5>Selected word count for covering letter:</h5>
 
