suitibility checker MVP finished

--- a/website/templates/results.html
+++ b/website/templates/results.html
@@ -7,5 +7,7 @@
     <br />
     <h3>ChatGPT's skills matcher</h3>
     <p>{{ skills_matcher }}</p>
+    <h3>ChatGPT's suitibility matcher</h3>
+    <p>{{ suitibility_response }}</p>
 </div>
 {% endblock %}
