added space under selected passages

--- a/website/templates/analysis_create/ana_cre_create.html
+++ b/website/templates/analysis_create/ana_cre_create.html
@@ -24,9 +24,11 @@
 </div>
 
   <div class="mt-3">
-    <div id="selectedTags">
-    </div>
+    <div id="selectedTags"></div>
+    <br />
   </div>
+
+  
 
   <h5>Added extra supporting infomation.</h5>
   
