added mvp of covering letter added

--- a/website/templates/results.html
+++ b/website/templates/results.html
@@ -9,5 +9,10 @@
     <p>{{ skills_matcher }}</p>
     <h3>ChatGPT's suitibility matcher</h3>
     <p>{{ suitibility_response }}</p>
+    <br />
+    <br />
+    <br />
+    <h3>your covering letter</h3>
+    <p>{{ create_covering_letter }}</p>
 </div>
 {% endblock %}
