add similar project request api

--- a/website/templates/results.html
+++ b/website/templates/results.html
@@ -14,5 +14,8 @@
     <br />
     <h3>your covering letter</h3>
     <p>{{ create_covering_letter }}</p>
+    <br />
+    <h3>project match</h3>
+    <p>{{ projects_matched }}</p>
 </div>
 {% endblock %}
