--- a/website/templates/results.html
+++ b/website/templates/results.html
@@ -8,7 +8,26 @@
     <h3>ChatGPT's skills matcher</h3>
     <p>{{ skills_matcher }}</p>
     <h3>ChatGPT's suitibility matcher</h3>
-    <p>{{ suitibility_response }}</p>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-md-6">
+                <h2 class="text-success">Pros</h2>
+                <ul class="list-group">
+                    {% for pro in pros %}
+                    <li class="list-group-item list-group-item-success">{{ pro }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="col-md-6">
+                <h2 class="text-danger">Cons</h2>
+                <ul class="list-group">
+                    {% for con in cons %}
+                    <li class="list-group-item list-group-item-danger">{{ con }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
     <br />
     <br />
     <br />
