--- a/website/templates/results.html
+++ b/website/templates/results.html
@@ -3,8 +3,10 @@
 {% block content %}
 <div class="container">
     <br />
-    <h3>your covering letter</h3>
+    <h3>skills match</h3>
     <p>{{ create_covering_letter }}</p>
     <br />
+    <h3>projects match</h3>
+    <p>{{ create_covering_project }}</p>
 </div>
 {% endblock %}
