rendered exp on resuts page

--- a/website/templates/results.html
+++ b/website/templates/results.html
@@ -8,5 +8,9 @@
     <br />
     <h3>projects match</h3>
     <p>{{ create_covering_project }}</p>
+    <br />
+    <h3>work exp match</h3>
+    <p>{{ workexp_match }}</p>
+
 </div>
 {% endblock %}
