added extra info on job

--- a/website/templates/results.html
+++ b/website/templates/results.html
@@ -19,5 +19,8 @@
             <li>{{ description }}: {{ "%.5f"|format(score) }}</li>
         {% endfor %}
     </ul>
+    <h3>covering letter</h3>
+    <p>{{ covering_letter }}</p>
+    <br />
 </div>
 {% endblock %}
