filter added to the message display

--- a/website/templates/results.html
+++ b/website/templates/results.html
@@ -2,25 +2,30 @@
 
 {% block content %}
 <div class="container">
-    <br />
-    <h3>skills match</h3>
+    <br>
+    <h3>Skills Match</h3>
     <p>{{ create_covering_letter }}</p>
-    <br />
-    <h3>projects match</h3>
+    <br>
+    <h3>Projects Match</h3>
     <ul>
         {% for _, project_name, score in create_covering_project %}
             <li>{{ project_name }}: {{ "%.5f"|format(score) }}</li>
         {% endfor %}
     </ul>
-    <br />
-    <h3>work exp match</h3>
+    <br>
+    <h3>Work Experience Match</h3>
     <ul>
         {% for _, description, score in workexp_match %}
             <li>{{ description }}: {{ "%.5f"|format(score) }}</li>
         {% endfor %}
     </ul>
-    <h3>covering letter</h3>
-    <p>{{ covering_letter }}</p>
-    <br />
+    <br>
+    <h3>Covering Letter Message</h3>
+    <p>{{ covering_letter_message }}</p>
+    <br>
+    <h3>Covering Letter</h3>
+        <!-- Use the nl2br filter to convert newlines to <br> tags -->
+     <p>{{ covering_letter | nl2br }}</p>
+    <br>
 </div>
 {% endblock %}
