adding donut chart to skills match

--- a/website/templates/analysis_create/ana_cre_main.html
+++ b/website/templates/analysis_create/ana_cre_main.html
@@ -8,6 +8,7 @@
 
 {% if 'sections' in session %}
   {% include "analysis_create/ana_cre_outputad.html" %}
+  {% include "analysis_create/ana_cre_dashboard_output.html" %}
   {% include "analysis_create/ana_cre_create.html"%}
 {% else %}
   {% include "analysis_create/ana_cre_inputad.html" %}
