--- a/website/templates/analysis_create/ana_cre_dashboard_output.html
+++ b/website/templates/analysis_create/ana_cre_dashboard_output.html
@@ -20,13 +20,10 @@
     </div>
 </div>
 
-
-
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
 
 <script>
-    // setup 
-    fetch('/get-chart-data')
+    fetch('/get-doughnut-core-skills-data')
     .then(response => response.json())
     .then(data => {
         percentage = data['percentage'];
@@ -62,28 +59,19 @@
             }
 
         }
-    // config 
+
         const config = {
             type: 'doughnut',
-            data: chartData, // Use chartData as the data source
+            data: chartData,
             options: {},
             plugins: [doughnutLabal]
-
         };
     
-
-    // render init block
-    const myChart1 = new Chart(
-      document.getElementById('myChart1'),
-      config
-    );
-    
-    const myChart2 = new Chart(
-        document.getElementById('myChart2'),
+        const myChart1 = new Chart(
+        document.getElementById('myChart1'),
         config
-    );
+        );
+    });
 
-
-});
 </script>
 
