--- a/website/templates/analysis_create/ana_cre_dashboard_output.html
+++ b/website/templates/analysis_create/ana_cre_dashboard_output.html
@@ -4,16 +4,16 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 100%;">
                 <div class="card-body">
-                    <canvas id="myChart1" width="200" height="200"></canvas>
+                    <canvas id="myChart1" style="width: 100%; height: 100%;"></canvas>
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="card" style="width: 18rem;">
+        <div class="col-md-8">
+            <div class="card" style="width: 100%; height: 100%;">
                 <div class="card-body">
-                    <canvas id="myChart2" width="200" height="200"></canvas>
+                    <canvas id="myChart2" style="width: 100%; height: 100%;"></canvas>
                 </div>
             </div>
         </div>
@@ -80,6 +80,7 @@
     .then(response => response.json())
     .then(data => {
       // Data is now an array of objects received from the Flask route
+
       const chartData = {
         labels: data.map(item => item[1]), // Use the second element of each tuple as labels
         datasets: [{
@@ -87,13 +88,32 @@
           backgroundColor: 'rgba(255, 26, 104, 0.2)',
           borderColor: 'rgba(255, 26, 104, 1)',
           borderWidth: 1
-        }]
+
+        },
+        {
+          data: data.map(item => item[3]), // Create an object with 'y' property
+          backgroundColor: 'rgba(0, 0, 0, 0.2)',
+          borderColor: 'rgba(0, 0, 0, 1)', // Color of the line
+          borderWidth: 0.5, // Width of the line
+          type: 'line' // Specify that this dataset should be a line chart
+        }
+        ]
       };
   
       const config = {
         type: 'bar',
         data: chartData,
         options: {
+            scales: {
+                x: {
+                  min: 0,   // Set the minimum value of the x-axis to 0
+                  max: 1,   // Set the maximum value of the x-axis to 1
+                  beginAtZero: false, // Do not start the x-axis at zero
+                  ticks: {
+                    stepSize: 0.1, // Customize the step size between ticks as needed
+                  },
+                },
+              },
           indexAxis: 'y',
           elements: {
             bar: {
