--- a/website/templates/analysis_create/ana_cre_dashboard_output.html
+++ b/website/templates/analysis_create/ana_cre_dashboard_output.html
@@ -10,6 +10,7 @@
                 </div>
             </div>
         </div>
+
         <div class="col-md-8">
             <div class="card" style="width: 100%; height: 100%;">
                 <div class="card-body">
@@ -17,7 +18,21 @@
                 </div>
             </div>
         </div>
+  </div>
+</div>
+
+<br />
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card" style="width: 100%;">
+        <div class="card-body">
+          <canvas id="myChart3" style="width: 100%; height: 100%;"></canvas>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
@@ -135,5 +150,67 @@
         config
       );
     })
+</script>
+
+<script>
+  fetch('/get-bar-workexp-score-data')
+  .then(response => response.json())
+  .then(data => {
+    // Data is now an array of objects received from the Flask route
+
+    const chartData = {
+      labels: data.map(item => item[1]), // Use the second element of each tuple as labels
+      datasets: [{
+        data: data.map(item => item[2]), // Use the third element of each tuple as data
+        backgroundColor: 'rgba(255, 26, 104, 0.2)',
+        borderColor: 'rgba(255, 26, 104, 1)',
+        borderWidth: 1
+
+      },
+      {
+        data: data.map(item => item[3]), // Create an object with 'y' property
+        backgroundColor: 'rgba(0, 0, 0, 0.2)',
+        borderColor: 'rgba(0, 0, 0, 1)', // Color of the line
+        borderWidth: 0.5, // Width of the line
+        type: 'line' // Specify that this dataset should be a line chart
+      }
+      ]
+    };
+
+    const config = {
+      type: 'bar',
+      data: chartData,
+      options: {
+          scales: {
+              x: {
+                min: 0,   // Set the minimum value of the x-axis to 0
+                max: 1,   // Set the maximum value of the x-axis to 1
+                beginAtZero: false, // Do not start the x-axis at zero
+                ticks: {
+                  stepSize: 0.1, // Customize the step size between ticks as needed
+                },
+              },
+            },
+        indexAxis: 'y',
+        elements: {
+          bar: {
+            borderWidth: 2,
+          }
+        },
+        responsive: true,
+        plugins: {
+          legend: {
+            display: false,
+          },
+          
+        }
+      },
+    };
+
+    const myChart3 = new Chart(
+      document.getElementById('myChart3'),
+      config
+    );
+  })
 </script>
 
